@@ -1,7 +1,9 @@
 package com.project.mhnbackend.security.config;
 
+import java.util.Arrays;
 import java.util.List;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
@@ -25,6 +27,8 @@ import lombok.extern.log4j.Log4j2;
 @Configuration
 @EnableMethodSecurity
 public class CustomSecurityConfig {
+   @Value("${cors.allowed-origins}")
+   private String[] allowedOrigins;
    
    @Bean
    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
@@ -73,7 +77,8 @@ public class CustomSecurityConfig {
    @Bean
    public CorsConfigurationSource corsConfigurationSource() {
       CorsConfiguration configuration = new CorsConfiguration();
-      configuration.setAllowedOriginPatterns(List.of("http://localhost:3000","http://mhnbucket.s3-website.ap-northeast-2.amazonaws.com")); // 프론트엔드 주소 허용
+//      configuration.setAllowedOriginPatterns(List.of("http://localhost:3000","http://mhnbucket.s3-website.ap-northeast-2.amazonaws.com")); // 프론트엔드 주소 허용
+      configuration.setAllowedOriginPatterns(Arrays.asList(allowedOrigins));
       configuration.setAllowedMethods(List.of("HEAD", "GET", "POST", "PUT", "DELETE", "OPTIONS")); // 모든 HTTP 메소드 허용
       configuration.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type")); // 모든 헤더 허용
       configuration.setAllowCredentials(true); // 자격 증명 허용
